--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,4 +8,5 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/agenda/agenda";
+@import "../pages/agenda/agenda-list";
 @import "../pages/forms/lesson";
