Can add/edit students and lessons synced with firebase

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,3 +10,4 @@
 @import "../pages/agenda/agenda";
 @import "../pages/agenda/agenda-list";
 @import "../pages/forms/lesson";
+@import "../pages/forms/add-popover";
