Adding the form to change the password

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,3 +11,4 @@
 @import "../pages/agenda/agenda-list";
 @import "../pages/forms/lesson";
 @import "../pages/forms/add-popover";
+@import "../pages/forms/auth";
