Almost ready to work with auth. Reset password has an issue. Waiting for a viable upgrade of angularfire2

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,3 +12,4 @@
 @import "../pages/forms/lesson";
 @import "../pages/forms/add-popover";
 @import "../pages/forms/auth";
+@import "../pages/forms/change-password";
