--- a/app/theme/app.ios.scss
+++ b/app/theme/app.ios.scss
@@ -17,7 +17,7 @@
 // --------------------------------------------------
 // Custom App variables must be declared before importing Ionic.
 // Ionic will use its default values when a custom variable isn't provided.
-@import 'ionic.ios';
+@import '~ionic-angular/ionic.ios';
 
 
 // App Shared Sass
