--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -4,7 +4,8 @@
 // --------------------------------------------------
 // Makes Ionic Sass functions available to your App
 
-@import 'globals.core';
+//@import 'globals.core';
+@import "~ionic-angular/globals.core";
 
 // App Shared Variables
 // --------------------------------------------------
