Fix appcache and spacer between entries in the agenda

--- a/app/pages/agenda/agenda-list.scss
+++ b/app/pages/agenda/agenda-list.scss
@@ -44,7 +44,14 @@
 	.swiper-slide {
 		align-items: flex-start;
 	}
-	
+
+	.separator.item {
+		min-height: 1rem;
+		ion-label {
+			margin: 0;
+		}
+	}
+
 	.no-student {
 		font-style: italic;
 	}
