removed total paid amount and start billing text, replace by a payment history and started to implement a check to find until which date a given student paid.

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,6 +10,10 @@
 @import "../pages/agenda/agenda";
 @import "../pages/agenda/agenda-list";
 @import "../pages/forms/lesson";
-@import "../pages/forms/add-popover";
-@import "../pages/forms/auth";
+@import "../pages/pop/add-popover";
+@import "../pages/pop/auth";
 @import "../pages/forms/change-password";
+
+.right {
+	text-align: right;
+}
