Fixed email verification logic, add an icon when the email is not verified yet.

--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -7,6 +7,8 @@
 //@import 'globals.core';
 @import "~ionic-angular/globals.core";
 
+$warning: #ff8d3b;
+
 // App Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
