fix(build) can bundle. Errors are now in the browser: must fix new modules arrangement.

--- a/src/app/agenda/pages/agenda/agenda-list.scss
+++ b/src/app/agenda/pages/agenda/agenda-list.scss
@@ -1,6 +1,6 @@
-@import "~ionic-angular/util/functions";
-//@import "../../theme/app.variables";
-@import "~ionic-angular/themes/default";
+//@import "~ionic-angular/themes/ionic.functions";
+//@import "~ionic-angular/themes/ionic.theme.default";
+@import "../../../../theme/variables";
 
 .agenda {
 	//ion-list {
